# Symbolic-rule-extraction

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: experiment.yaml  finetune.yaml  sae.yaml
notebooks/: 00_check_setup.ipynb  01_data_setup.ipynb  01_llm_finetune copy_exp3.ipynb  01_llm_finetune.ipynb  01_llm_finetune_exp3-2.ipynb  01_llm_finetune_exp4-2.ipynb  01_llm_finetune_exp4-3.ipynb  01_llm_finetune_exp4-4.ipynb  01_llm_finetune_exp4.ipynb  01_llm_finetune_exp5.ipynb  01_llm_finetune_exp6-1.ipynb  01_llm_finetune_exp6-2.ipynb  01_llm_finetune_exp7-2.ipynb  01_llm_finetune_exp8-2.ipynb  02_layer_probing_exp1.ipynb  02_layer_probing_exp2.ipynb  02_layer_probing_exp3-1.ipynb  02_layer_probing_exp3-2.ipynb  02_layer_probing_exp3.ipynb  02_layer_probing_exp4.ipynb  02_layer_probing_exp5.ipynb  02_layer_probing_exp6-1.ipynb  02_layer_probing_exp6.ipynb  02_layer_probing_exp7-2.ipynb  02_layer_probing_exp8-2.ipynb  02_layer_probing_graphs.ipynb  03_logit_lens_exp3-2.ipynb  03_logit_lens_exp3.ipynb  03_logit_lens_exp4.ipynb  03_logit_lens_exp6-1.ipynb  03_logit_lens_exp6.ipynb  03_logit_lens_exp7-2.ipynb  03_logit_lens_exp8-2.ipynb  04_baseline_exp3-2.ipynb  04_baseline_exp6-1.ipynb  04_baseline_exp7-2.ipynb  04_baseline_exp8-2.ipynb  05_sae_training.ipynb  05_sae_training_exp3-2-2.ipynb  05_sae_training_exp3-2.ipynb  (+24 more)
src/: baseline_rules.py  data.py  dataset_cot.py  interventions.py  llm_upgrade.py  logit_lens.py  probing.py  rule_extraction.py  sae.py  sae_test.py
