[project]
name = "mephi-diss"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "datasets",
    "einops",
    "fancy-einsum",
    "imodels",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "peft",
    "plotly",
    "sae-lens",
    "scikit-learn",
    "scipy",
    "seaborn",
    "shap",
    "statsmodels",
    "sentencepiece",
    "tokenizers",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformer-lens",
    "transformers",
    "wandb",
    "rulefit",
    "jaxtyping",
    "nltk",
    "python-dotenv",
    "pyyaml",
    "requests",
    "rich",
    "sympy",
    "typer",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
circuitsvis = { git = "https://github.com/callummcdougall/CircuitsVis.git", subdirectory = "python", rev = "1e6129d" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
